CHANGES
=======

0.1.9
-----

* Fix a bug in the error handler
* Add small note to README
* Add ChangeLog

0.1.8
-----

* Add notes on timeout settings
* Update package versions to get security fix
* Refactor indentation
* Update changelog

0.1.7
-----

* Refresh README
* Align with default value change to https

0.1.6
-----

* Add notes about PREFERRED\_URL\_SCHEME
* Add notes on DEBUG
* Add OIDC\_EXTRA\_AUTH\_REQUEST\_PARAMS
* Fix typo
* Increase uWSGI buffer size, for long query params

0.1.5
-----

* Fix discourse\_ prefix bug
* Things works!

0.1.4
-----

* Ensure strings when building up the query params
* Note about deployment

0.1.3
-----

* Added logging etc..
* Add inline note about /health
* Readme instructions / test detail

0.1.2
-----

* Add /health endpoint and test
* Add .vscode to gitignore
* Readme fixes

0.1.1
-----

* Reworked Dockerization
* Update docstrings
* Redundant LICENCE stuff removed
* Lots of tests added
* Finetune tests
* Fixed configuration issues
* Things i need to revert soon..
* SERVER\_NAME was very important ^^
* A lot of work to Dockerize it functionally..
* Started using create\_app() for Dockerization
* Add note about this not being ready for use
* Ready for test deployment
* Cleanup old test
* Too many changes in one commit..
* Fix dependencies etc
* Define known discourse sso attributes
* Standing on the shoulders of giants
* Refactor structure
* README.md details
* Update package info
* Update README with PyPI dev instructions
* Initialize .gitignore
* Initialize pipenv
* Update README.md preliminary
* Prelim setup.py adjustments
* Boilerplate setup.py
* Initial python package foundation