@@ -3,6 +3,10 @@
 # This Dockerfile was founded on the work of Yoan Blanc (@greut):
 # https://github.com/greut/pipenv-to-wheel/blob/master/Dockerfile
 
+# Local dev
+# docker build --tag discourse-sso-oidc-bridge:local .
+# docker run --rm discourse-sso-oidc-bridge:local
+
 FROM kennethreitz/pipenv as pipenv
 
 ADD . /app
@@ -28,7 +32,7 @@ RUN set -xe \
         python3-pip \
         uwsgi-plugin-python3 \
  && python3 -m pip install *.whl \
- && apt-get remove -y python3-pip python3-wheel \
+ && apt-get remove -y python3-wheel \
  && apt-get autoremove -y \
  && rm -f *.whl \
  && rm -rf /root/.cache \
