@@ -12,8 +12,8 @@ urllib3 = "*"
 wheel = "*"
 
 [packages]
-flask = "~=1.0"
-flask-pyoidc = "~=2.0"
+flask = "~=1.1"
+flask-pyoidc = "~=3.1"
 healthcheck = "*"
 
 [requires]
