@@ -1,27 +1,26 @@
 -i https://pypi.org/simple
-alabaster==0.7.12
-asn1crypto==0.24.0
-beaker==1.10.1
-certifi==2019.3.9
-cffi==1.12.2
+beaker==1.11.0
+certifi==2019.11.28
+cffi==1.13.2
 chardet==3.0.4
 click==7.0
-cryptography==2.6.1
-flask-pyoidc==2.0.0
-flask==1.0.2
-future==0.17.1
+cryptography==2.8
+defusedxml==0.6.0
+flask-pyoidc==3.1.0
+flask==1.1.1
+future==0.18.2
 healthcheck==1.3.3
 idna==2.8
 itsdangerous==1.1.0
-jinja2==2.10.1
-mako==1.0.8
+jinja2==2.10.3
+mako==1.1.0
 markupsafe==1.1.1
-oic==0.12
+oic==1.1.2
 pycparser==2.19
-pycryptodomex==3.8.1
-pyjwkest==1.4.0
-pyopenssl==19.0.0
-requests==2.21.0
-six==1.12.0
-urllib3==1.24.1
-werkzeug==0.15.2
+pycryptodomex==3.9.4
+pyjwkest==1.4.2
+requests==2.22.0
+six==1.13.0
+typing-extensions==3.7.4.1
+urllib3==1.25.7
+werkzeug==0.16.0
