@@ -1,6 +1,10 @@
 CHANGES
 =======
 
+* Update README.md
+* Bump flask to 1.1 and flask-pyoidc to 3.1
+* Update release instructions in README
+
 0.1.9
 -----
 
